# kerek

./: .gitignore  .pylintrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Vagrantfile  flake.nix
.github/workflows/: release.yaml
example/: .gitignore  Dockerfile  Vagrantfile  compose.yaml  greet.Caddyfile  kerek.json  orchestration.yaml  playbook.yaml
example/custom_bin/: ssh  ssh.sh
example/provision/: playbook.yaml
example/scripts/: acceptance_test.sh  base_test.sh  move_to_next_version.sh  smoke_test.sh
examples/default/: .gitignore  Containerfile  Vagrantfile  compose.yaml  kerek.json
examples/image_transfer/: Dockerfile  storage.toml  test.sh
examples/kubernetes/: Vagrantfile  kerek.json  orchestration.yaml
examples/scripts/: smoke_test.sh
examples/service_dependencies/: compose.yaml  test.sh
examples/ssh_delivery/: Dockerfile  Vagrantfile  compose.yaml  test.sh
examples/zero_downtime_deployment/: compose.yaml  test.sh
looper/: .pylintrc  Cargo.toml  README.md  build.rs  flake.nix
looper/example/: .gitignore  Containerfile  Dockerfile  images.json  kerek.json  orchestration.yaml  skaffold.yaml
looper/example/scripts/: acceptance_test.sh  base_test.sh  move_to_next_version.sh  smoke_test.sh
looper/examples/: .gitignore  env_tests.sh
looper/examples/compose/: Vagrantfile  compose.yaml  kerek.json
looper/examples/default/: Containerfile  Vagrantfile  kerek.json
looper/examples/kubernetes/: .gitignore  Vagrantfile  kerek.json  orchestration.yaml  provision.sh  skaffold.yaml
looper/examples/log_only/: kerek.json  log.sh
looper/examples/scripts/: acceptance_test.sh  base_test.sh  env_tests.sh  smoke_test.sh
looper/scripts/: test.sh
looper/src/: main.rs  run.rs
looper/src/action/: clean.rs  clear.rs  diagnose.rs  dry_run.rs  mod.rs  provision.rs  run.rs
looper/src/action/run/: iterate.rs  main.rs  mod.rs  reset.rs  set_up.rs
looper/src/subcommand/: dry_run.rs  loop.rs  mod.rs  provision.rs  run.rs
looper/tests/: handles_example.rs  handles_examples.rs
podman_quadlets_poc/: README.md  Vagrantfile  deploy.sh  hi@.container  reverse-proxy.container
scripts/: test.sh
src/: command.rs  docker.rs  docker_cli_plugin_metadata.rs  docker_compose.rs  docker_host.rs  log.rs  main.rs  run_with_ssh_config.rs  ssh.rs  transfer_images.rs  tunnel_ssh.rs
src/action/: Vagrantfile  clean.rs  clear.rs  diagnose.rs  mod.rs  provision.rs  run.rs
src/action/run/: iterate.rs  main.rs  mod.rs  reset.rs  set_up.rs
src/deploy/: apply_changes.rs  get_actual_state.rs  get_desired_state.rs  mod.rs  model.rs  plan_changes.rs
src/provision/: mod.rs  provision_on_host.sh
src/subcommand/: clean.rs  mod.rs  run.rs
src/subcommand/deploy/: apply_changes.rs  deploy.py  deploy_locally.rs  deploy_on_remote.py  get_actual_state.rs  get_desired_state.rs  mod.rs  model.rs
src/subcommand/provision/: mod.rs  playbook.yaml  provision.py  provision_test.sh
src/subcommand/render/: mod.rs
tests/: handles_example.rs  handles_example.sh  handles_examples.rs  handles_ssh_delivery.rs  handles_ssh_delivery.sh
