[package]
name = "wheelsticks"
version = "1.0.0"
authors = ["Benjamin Fischer <benjamin.fischer@evolutics.info>"]
edition = "2021"
description = "Zero-downtime deployments for Docker Compose"
homepage = "https://github.com/evolutics/wheelsticks"
repository = "https://github.com/evolutics/wheelsticks"
license = "MIT"
keywords = ["compose", "deployment", "docker", "docker-compose", "podman"]
categories = ["command-line-utilities", "virtualization", "web-programming"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
test-case = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
