[package]
name = "kerek"
version = "2.2.0"
authors = ["Benjamin Fischer <benjamin.fischer@evolutics.info>"]
edition = "2021"
description = "Light continuous delivery for Docker Compose"
homepage = "https://github.com/evolutics/kerek"
repository = "https://github.com/evolutics/kerek"
license = "MIT"
keywords = ["compose", "delivery", "deployment", "docker", "podman"]
categories = ["command-line-utilities", "virtualization", "web-programming"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
test-case = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
