[package]
name = "kerek"
version = "0.1.0"
authors = ["Benjamin Fischer <benjamin.fischer@evolutics.info>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = [
  "derive",
  "error-context",
  "help",
  "usage",
  "wrap_help",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
anyhow = "1"
vergen = { version = "8", default-features = false, features = ["git"] }
